jenkins/jenkins-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: jenkins
spec:
    replicas: 1
    strategy: 
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
    template:
        metadata:
            labels:
            app: jenkins
        spec:
            imagePullSecrets:
            - name: myregistrykey
            containers:
            - name: jenkins
            image: harbor.test.com/common/jenkins:latest
            imagePullPolicy: IfNotPresent
            ports:
            - containerPort: 8080
              name: web
              protocol: TCP
            - containerPort: 50000
              name: agent
              protocol: TCP
            volumeMounts:
            - name: jenkinshome
            mountPath: /var/jenkins_home
       volumes:
       - name: influxdb-storage
         emptyDir: {}
#       volumes:
#       - name: jenkinshome
#         nfs:
#         server: 192.168.0.10
#         path: "/data/jenkins"
